<resources>
    <string name="app_name">InventoryApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="products">Products</string>
    <string name="sales">Sales</string>
    <string name="home_summary_text">here you can check a summary of your month sales</string>
    <string name="home_summary_title">Hi</string>
    <string name="in_stock">In stock:</string>
    <string name="price">Price</string>
    <string name="sold_for">Sold for</string>
    <string name="total">Total</string>
    <string name="clear">Clear</string>
    <string name="quantity_sold">Quantity sold:</string>
    <string name="product_name">Product name</string>
    <string name="give_a_description">Give a description</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="insert_new_data">Insert new product</string>
    <string name="invalid_quantity">Invalid quantity</string>
    <string name="invalid_price">Invalid price</string>
    <string name="invalid_name">Invalid name</string>
    <string name="product_not_saved">Product not saved</string>
    <string name="product_saved">Product saved</string>
    <string name="Delete">Delete</string>
    <string name="delete_confirm">Confirm delete?</string>
    <string name="deleted">Deleted</string>
    <string name="error_delete">Error deleting this product, try again.</string>
    <string name="edit">Edit</string>
    <string name="product_updated">Product updated</string>
    <string name="edit_product">Edit Product</string>
    <string name="add_product">Add product</string>
    <string name="average_price">Average price:</string>
    <string name="last_sold">Last sold:</string>
    <string name="grafico">Grafico</string>
    <string name="track_sales">Track your sales growth</string>
    <string name="rate_of_sales">Rate of sales</string>
    <string name="sales_rise">Sales rise</string>
    <string name="items_growth">Items with steady growth</string>
    <string name="plus">Plus</string>
    <string name="sales_drop">Sales drop</string>
    <string name="minus">Minus</string>
    <string name="items_decline">Items in sales decline</string>
    <string name="weekly_profit">Weekly profit:</string>
    <string name="profit_sales">Profit from this week sales</string>
    <string name="money">money</string>
    <string name="today_sales">Today sales:</string>
    <string name="week_sales">Week sales:</string>
    <string name="month_sales">Month sales:</string>
    <string name="first_in_number">1º</string>
    <string name="second_in_number">2º</string>
    <string name="profit">Profit</string>
    <string name="daily_profit">Daily profit:</string>
    <string name="monthly_profit">Monthly profit:</string>
    <string name="sell">Sell</string>
    <string name="total_price">Total price:</string>
    <string name="unit_price">Unit price:</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
</resources>
