<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="br.com.renandeldotti.inventoryapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_stock"
        android:name="br.com.renandeldotti.inventoryapp.ui.stock.StockFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_stock" />

    <fragment
        android:id="@+id/navigation_sales"
        android:name="br.com.renandeldotti.inventoryapp.ui.sales.SalesFragment"
        android:label="@string/sales"
        tools:layout="@layout/fragment_sales" />
</navigation>
